test/files/neg/t8325-c.check
t8325-c.scala:3: error: illegal literal
  def k(xx: Int`*`) = ???
                  ^
t8325-c.scala:4: error: ')' expected but eof found.
}
 ^
two errors found
